Included a notebook showing how the data was imported and the logic behind how training and test data was created.

--- a/01-initial-model/data-generation.ipynb
+++ b/01-initial-model/data-generation.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## About\n",
+    "\n",
+    "This notebook provides a demonstration of how the training and test data was generated from the marketing_campaign.csv.\n",
+    "\n",
+    "### Downloading the data\n",
+    "\n",
+    "Open a Linux terminal and use the command below:\n",
+    "\n",
+    "```bash\n",
+    "$ wget https://raw.githubusercontent.com/Demiga-g/iFood-Marketing-Analysis/main/marketing_campaign.csv\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
