--- a/02-experiment-tracking/01-experiment-models.ipynb
+++ b/02-experiment-tracking/01-experiment-models.ipynb
@@ -279,13 +279,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 14:57:02 INFO mlflow.tracking.fluent: Experiment with name 'all-models-experiment' does not exist. Creating a new experiment.\n"
+      "2023/06/18 08:17:57 INFO mlflow.tracking.fluent: Experiment with name 'all-models-experiment' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/1', creation_time=1686916622643, experiment_id='1', last_update_time=1686916622643, lifecycle_stage='active', name='all-models-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/1', creation_time=1687065477952, experiment_id='1', last_update_time=1687065477952, lifecycle_stage='active', name='all-models-experiment', tags={}>"
       ]
      },
      "execution_count": 12,
@@ -307,7 +307,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 14:57:18 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/home/mgubuntu/anaconda3/envs/marketing_MLOps/lib/python3.9/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n",
+      "2023/06/18 08:18:48 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/home/mgubuntu/anaconda3/envs/marketing_MLOps/lib/python3.9/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n",
       "/home/mgubuntu/anaconda3/envs/marketing_MLOps/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
@@ -364,7 +364,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 14:57:54 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n"
+      "2023/06/18 08:19:53 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n"
      ]
     }
    ],
@@ -414,13 +414,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 14:58:06 INFO mlflow.tracking.fluent: Experiment with name 'rfc-experiment' does not exist. Creating a new experiment.\n"
+      "2023/06/18 08:19:56 INFO mlflow.tracking.fluent: Experiment with name 'rfc-experiment' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/2', creation_time=1686916686163, experiment_id='2', last_update_time=1686916686163, lifecycle_stage='active', name='rfc-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/2', creation_time=1687065596730, experiment_id='2', last_update_time=1687065596730, lifecycle_stage='active', name='rfc-experiment', tags={}>"
       ]
      },
      "execution_count": 16,
@@ -503,7 +503,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 14:59:13 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '085ff8cd67974362871781b0d51c8af3', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2023/06/18 08:21:01 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '81b07afc8a014cebb3c98a0b22f77acc', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
      ]
     }
    ],
@@ -544,13 +544,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 14:59:22 INFO mlflow.tracking.fluent: Experiment with name 'sk-gbc-experiment' does not exist. Creating a new experiment.\n"
+      "2023/06/18 08:21:12 INFO mlflow.tracking.fluent: Experiment with name 'sk-gbc-experiment' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/3', creation_time=1686916762784, experiment_id='3', last_update_time=1686916762784, lifecycle_stage='active', name='sk-gbc-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/3', creation_time=1687065672903, experiment_id='3', last_update_time=1687065672903, lifecycle_stage='active', name='sk-gbc-experiment', tags={}>"
       ]
      },
      "execution_count": 22,
@@ -620,7 +620,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 15:00:43 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '580d2245b2884ca996ad0ee4cef346b4', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2023/06/18 08:22:32 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '833fedd2ce1d4178a17173201807c668', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
      ]
     }
    ],
@@ -660,13 +660,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 15:00:54 INFO mlflow.tracking.fluent: Experiment with name 'xgbc-experiment' does not exist. Creating a new experiment.\n"
+      "2023/06/18 08:22:44 INFO mlflow.tracking.fluent: Experiment with name 'xgbc-experiment' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/4', creation_time=1686916854070, experiment_id='4', last_update_time=1686916854070, lifecycle_stage='active', name='xgbc-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/4', creation_time=1687065764674, experiment_id='4', last_update_time=1687065764674, lifecycle_stage='active', name='xgbc-experiment', tags={}>"
       ]
      },
      "execution_count": 27,
@@ -742,7 +742,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 15:02:02 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'a8166dfd4eaa4cde92f8e0a36c80e7d8', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n"
+      "2023/06/18 08:24:56 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'd0949320564b43239c5dac3831c4b665', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n"
      ]
     }
    ],
@@ -785,13 +785,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 15:02:09 INFO mlflow.tracking.fluent: Experiment with name 'svc-experiment' does not exist. Creating a new experiment.\n"
+      "2023/06/18 08:25:06 INFO mlflow.tracking.fluent: Experiment with name 'svc-experiment' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/5', creation_time=1686916929314, experiment_id='5', last_update_time=1686916929314, lifecycle_stage='active', name='svc-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/5', creation_time=1687065906686, experiment_id='5', last_update_time=1687065906686, lifecycle_stage='active', name='svc-experiment', tags={}>"
       ]
      },
      "execution_count": 32,
@@ -862,7 +862,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 15:02:45 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'b01ebce2300848d3ba270096d9f637d6', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2023/06/18 08:25:41 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '758d276c6d2d414ab0b81e73565d04fe', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
      ]
     }
    ],
@@ -903,13 +903,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 15:02:53 INFO mlflow.tracking.fluent: Experiment with name 'xgboost-experiment' does not exist. Creating a new experiment.\n"
+      "2023/06/18 08:25:56 INFO mlflow.tracking.fluent: Experiment with name 'xgboost-experiment' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/6', creation_time=1686916973393, experiment_id='6', last_update_time=1686916973393, lifecycle_stage='active', name='xgboost-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/6', creation_time=1687065956014, experiment_id='6', last_update_time=1687065956014, lifecycle_stage='active', name='xgboost-experiment', tags={}>"
       ]
      },
      "execution_count": 37,
@@ -975,7 +975,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [02:31<00:00,  5.03s/trial, best loss: -0.5737704918032787]\n"
+      "  0%|          | 0/30 [00:00<?, ?trial/s, best loss=?]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 30/30 [04:53<00:00,  9.80s/trial, best loss: -0.5737704918032787]\n"
      ]
     }
    ],
@@ -986,7 +993,8 @@
     "    algo = tpe.suggest,\n",
     "    max_evals = 30,\n",
     "    trials = Trials(),\n",
-    "    rstate=random_state\n",
+    "    rstate=random_state,\n",
+    "    verbose=False\n",
     ")"
    ]
   },
@@ -999,8 +1007,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 15:05:25 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'c2d238148d4e451487aa1a33d6f0ca23', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n",
-      "2023/06/16 15:05:31 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n"
+      "2023/06/18 08:30:50 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'be5e5f514cd347e1876e2a9404a8a8ea', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/06/18 08:30:55 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n"
      ]
     }
    ],
@@ -1054,13 +1068,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 15:05:35 INFO mlflow.tracking.fluent: Experiment with name 'log-reg-experiment' does not exist. Creating a new experiment.\n"
+      "2023/06/18 08:30:58 INFO mlflow.tracking.fluent: Experiment with name 'log-reg-experiment' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/7', creation_time=1686917135780, experiment_id='7', last_update_time=1686917135780, lifecycle_stage='active', name='log-reg-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/7', creation_time=1687066258720, experiment_id='7', last_update_time=1687066258720, lifecycle_stage='active', name='log-reg-experiment', tags={}>"
       ]
      },
      "execution_count": 42,
@@ -1110,16 +1124,7 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mgubuntu/anaconda3/envs/marketing_MLOps/lib/python3.9/site-packages/sklearn/linear_model/_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_result = fmin(\n",
     "    fn = objective,\n",
@@ -1141,7 +1146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/16 15:08:13 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '58a5797e4a4241f5be4f3db39117ca9e', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2023/06/18 08:33:05 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '29f060aa0ba04c1a8b560765b3a31414', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
      ]
     }
    ],
@@ -1166,23 +1171,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#Save model\n",
-    "with open('models/sci-rfc.bin', 'wb') as f_out:\n",
-    "    pickle.dump((dv, scii_rfc), f_out)"
-   ]
   }
  ],
  "metadata": {
