Changed how the `eval_metric_logs()` function was defined. Disabled verbosity when running logistic regression hyperparameter search.

--- a/02-experiment-tracking/01-experiment-models.ipynb
+++ b/02-experiment-tracking/01-experiment-models.ipynb
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting tracking uri\n",
+    "# Setting tracking uri (unique resource identifier)\n",
     "mlflow.set_tracking_uri(\"sqlite:///mlflow.db\")"
    ]
   },
@@ -239,21 +239,20 @@
    "outputs": [],
    "source": [
     "def eval_metrics_logs(y_true, y_pred):\n",
-    "    # Calculate the evaluation metrics\n",
-    "    f1 = f1_score(y_val, y_pred.round())\n",
-    "    precision = precision_score(y_val, y_pred.round(), zero_division=0)\n",
-    "    recall = recall_score(y_val, y_pred.round())\n",
-    "    pr_auc = roc_auc_score(y_val, y_pred.round())\n",
-    "    accuracy = accuracy_score(y_val, y_pred.round())\n",
+    "    \n",
+    "    # Calcualte the evaluation metrics\n",
+    "    metrics = {\n",
+    "        'f1': f1_score(y_val, y_pred.round()), \n",
+    "        'precision': precision_score(y_val, y_pred.round(), zero_division=0),\n",
+    "        'recall': recall_score(y_val, y_pred.round()),\n",
+    "        'pr_auc': roc_auc_score(y_val, y_pred.round()),\n",
+    "        'accuracy': accuracy_score(y_val, y_pred.round())\n",
+    "    }\n",
     "    \n",
     "    # Log the evaluation metrics\n",
-    "    mlflow.log_metric(\"f1\", f1)\n",
-    "    mlflow.log_metric(\"precision\", precision)\n",
-    "    mlflow.log_metric(\"recall\", recall)\n",
-    "    mlflow.log_metric(\"pr_auc\", pr_auc)\n",
-    "    mlflow.log_metric(\"accuracy\", accuracy) \n",
+    "    mlflow.log_metrics(metrics)\n",
     "    \n",
-    "    return precision"
+    "    return metrics['precision']"
    ]
   },
   {
@@ -275,13 +274,6 @@
    "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/06/18 08:17:57 INFO mlflow.tracking.fluent: Experiment with name 'all-models-experiment' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -307,7 +299,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 08:18:48 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/home/mgubuntu/anaconda3/envs/marketing_MLOps/lib/python3.9/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n",
+      "2023/06/18 09:17:00 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/home/mgubuntu/anaconda3/envs/marketing_MLOps/lib/python3.9/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n",
       "/home/mgubuntu/anaconda3/envs/marketing_MLOps/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
@@ -364,7 +356,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 08:19:53 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n"
+      "2023/06/18 09:17:48 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n"
      ]
     }
    ],
@@ -410,13 +402,6 @@
    "execution_count": 16,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/06/18 08:19:56 INFO mlflow.tracking.fluent: Experiment with name 'rfc-experiment' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -503,7 +488,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 08:21:01 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '81b07afc8a014cebb3c98a0b22f77acc', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2023/06/18 09:18:59 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '2499c44ab66d40ad82c636efbb9b7000', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
      ]
     }
    ],
@@ -540,13 +525,6 @@
    "execution_count": 22,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/06/18 08:21:12 INFO mlflow.tracking.fluent: Experiment with name 'sk-gbc-experiment' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -620,7 +598,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 08:22:32 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '833fedd2ce1d4178a17173201807c668', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2023/06/18 09:20:35 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '82b59da8f23242a7b4e96cb863d25a19', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
      ]
     }
    ],
@@ -656,13 +634,6 @@
    "execution_count": 27,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/06/18 08:22:44 INFO mlflow.tracking.fluent: Experiment with name 'xgbc-experiment' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -742,7 +713,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 08:24:56 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'd0949320564b43239c5dac3831c4b665', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n"
+      "2023/06/18 09:21:18 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'cc70c25fd7e549b19b0cd4b336084398', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n"
      ]
     }
    ],
@@ -781,13 +752,6 @@
    "execution_count": 32,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/06/18 08:25:06 INFO mlflow.tracking.fluent: Experiment with name 'svc-experiment' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -862,7 +826,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 08:25:41 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '758d276c6d2d414ab0b81e73565d04fe', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2023/06/18 09:22:07 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'a57e17c3a3964a1daa91ca69a57a3c76', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
      ]
     }
    ],
@@ -899,13 +863,6 @@
    "execution_count": 37,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/06/18 08:25:56 INFO mlflow.tracking.fluent: Experiment with name 'xgboost-experiment' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -970,22 +927,7 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/30 [00:00<?, ?trial/s, best loss=?]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 30/30 [04:53<00:00,  9.80s/trial, best loss: -0.5737704918032787]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_result = fmin(\n",
     "    fn = objective,\n",
@@ -1007,14 +949,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 08:30:50 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'be5e5f514cd347e1876e2a9404a8a8ea', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/06/18 08:30:55 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n"
+      "2023/06/18 09:28:26 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'd6596159ed244788b7706d802db60490', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n",
+      "2023/06/18 09:28:32 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n"
      ]
     }
    ],
@@ -1064,13 +1000,6 @@
    "execution_count": 42,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/06/18 08:30:58 INFO mlflow.tracking.fluent: Experiment with name 'log-reg-experiment' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1124,7 +1053,16 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mgubuntu/anaconda3/envs/marketing_MLOps/lib/python3.9/site-packages/sklearn/linear_model/_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "best_result = fmin(\n",
     "    fn = objective,\n",
@@ -1146,7 +1084,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 08:33:05 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '29f060aa0ba04c1a8b560765b3a31414', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2023/06/18 09:30:32 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'a03ab9d0a6c64fa0ae14fb128f3f6ee3', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
      ]
     }
    ],
