Deleted the `Default` experiment id and changed the `max_eval` parameter of hyperopt to 30 in Logistic Regression

--- a/02-experiment-tracking/01-experiment-models.ipynb
+++ b/02-experiment-tracking/01-experiment-models.ipynb
@@ -275,19 +275,27 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/1', creation_time=1687065477952, experiment_id='1', last_update_time=1687065477952, lifecycle_stage='active', name='all-models-experiment', tags={}>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/06/22 09:37:33 INFO mlflow.tracking.fluent: Experiment with name 'all-models-experiment' does not exist. Creating a new experiment.\n"
+     ]
     }
    ],
    "source": [
     "# Setting experiment\n",
-    "mlflow.set_experiment('all-models-experiment')\n"
+    "mlflow.set_experiment(experiment_name='all-models-experiment')\n",
+    "\n",
+    "# Delete the `Default` experiment\n",
+    "expt_id = mlflow.get_experiment_by_name('Default').experiment_id\n",
+    "\n",
+    "if expt_id == \"0\":\n",
+    "    try:\n",
+    "        mlflow.delete_experiment(expt_id)\n",
+    "    except mlflow.exceptions.MlflowException:\n",
+    "        pass\n",
+    "else:\n",
+    "    print('`Default` deleted...')"
    ]
   },
   {
@@ -299,7 +307,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 09:17:00 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/home/mgubuntu/anaconda3/envs/marketing_MLOps/lib/python3.9/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n",
+      "2023/06/22 09:37:51 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/home/mgubuntu/anaconda3/envs/marketing_MLOps/lib/python3.9/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n",
       "/home/mgubuntu/anaconda3/envs/marketing_MLOps/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
@@ -356,7 +364,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 09:17:48 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n"
+      "2023/06/22 09:38:35 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n"
      ]
     }
    ],
@@ -403,9 +411,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/06/22 09:38:39 INFO mlflow.tracking.fluent: Experiment with name 'rfc-experiment' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/2', creation_time=1687065596730, experiment_id='2', last_update_time=1687065596730, lifecycle_stage='active', name='rfc-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/2', creation_time=1687415919710, experiment_id='2', last_update_time=1687415919710, lifecycle_stage='active', name='rfc-experiment', tags={}>"
       ]
      },
      "execution_count": 16,
@@ -488,7 +503,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 09:18:59 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '2499c44ab66d40ad82c636efbb9b7000', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2023/06/22 09:39:38 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '65415ff78a3242c6922367f973f512cd', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
      ]
     }
    ],
@@ -526,9 +541,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/06/22 09:39:44 INFO mlflow.tracking.fluent: Experiment with name 'sk-gbc-experiment' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/3', creation_time=1687065672903, experiment_id='3', last_update_time=1687065672903, lifecycle_stage='active', name='sk-gbc-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/3', creation_time=1687415984452, experiment_id='3', last_update_time=1687415984452, lifecycle_stage='active', name='sk-gbc-experiment', tags={}>"
       ]
      },
      "execution_count": 22,
@@ -598,7 +620,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 09:20:35 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '82b59da8f23242a7b4e96cb863d25a19', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2023/06/22 09:40:46 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'a9e8e8f5b00f43c8893f81150ebb3df9', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
      ]
     }
    ],
@@ -635,9 +657,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/06/22 09:40:57 INFO mlflow.tracking.fluent: Experiment with name 'xgbc-experiment' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/4', creation_time=1687065764674, experiment_id='4', last_update_time=1687065764674, lifecycle_stage='active', name='xgbc-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/4', creation_time=1687416057019, experiment_id='4', last_update_time=1687416057019, lifecycle_stage='active', name='xgbc-experiment', tags={}>"
       ]
      },
      "execution_count": 27,
@@ -713,7 +742,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 09:21:18 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'cc70c25fd7e549b19b0cd4b336084398', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n"
+      "2023/06/22 09:41:37 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'bd5fb0f3428745c79386b02400a40d26', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n"
      ]
     }
    ],
@@ -753,9 +782,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/06/22 09:41:43 INFO mlflow.tracking.fluent: Experiment with name 'svc-experiment' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/5', creation_time=1687065906686, experiment_id='5', last_update_time=1687065906686, lifecycle_stage='active', name='svc-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/5', creation_time=1687416103501, experiment_id='5', last_update_time=1687416103501, lifecycle_stage='active', name='svc-experiment', tags={}>"
       ]
      },
      "execution_count": 32,
@@ -826,7 +862,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 09:22:07 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'a57e17c3a3964a1daa91ca69a57a3c76', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2023/06/22 09:42:13 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'eb396e3955ff4406b8bb91481da8f0bf', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
      ]
     }
    ],
@@ -864,9 +900,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/06/22 09:42:27 INFO mlflow.tracking.fluent: Experiment with name 'xgboost-experiment' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/6', creation_time=1687065956014, experiment_id='6', last_update_time=1687065956014, lifecycle_stage='active', name='xgboost-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/6', creation_time=1687416147151, experiment_id='6', last_update_time=1687416147151, lifecycle_stage='active', name='xgboost-experiment', tags={}>"
       ]
      },
      "execution_count": 37,
@@ -949,8 +992,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 09:28:26 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'd6596159ed244788b7706d802db60490', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n",
-      "2023/06/18 09:28:32 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n"
+      "2023/06/22 09:45:03 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '856a7ae21c134b21bc4f16e170ad6c2d', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n",
+      "2023/06/22 09:45:05 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n"
      ]
     }
    ],
@@ -1001,9 +1044,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/06/22 09:45:08 INFO mlflow.tracking.fluent: Experiment with name 'log-reg-experiment' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/7', creation_time=1687066258720, experiment_id='7', last_update_time=1687066258720, lifecycle_stage='active', name='log-reg-experiment', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/7', creation_time=1687416308841, experiment_id='7', last_update_time=1687416308841, lifecycle_stage='active', name='log-reg-experiment', tags={}>"
       ]
      },
      "execution_count": 42,
@@ -1053,22 +1103,13 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mgubuntu/anaconda3/envs/marketing_MLOps/lib/python3.9/site-packages/sklearn/linear_model/_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_result = fmin(\n",
     "    fn = objective,\n",
     "    space = space,\n",
     "    algo = tpe.suggest,\n",
-    "    max_evals = 100,\n",
+    "    max_evals = 30,\n",
     "    trials = Trials(),\n",
     "    rstate=random_state,\n",
     "    verbose=False\n",
@@ -1084,7 +1125,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 09:30:32 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'a03ab9d0a6c64fa0ae14fb128f3f6ee3', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2023/06/22 09:45:46 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'f44848b65012475bb12295274d5e4726', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
      ]
     }
    ],
