Changed the run id

--- a/02-experiment-tracking/02-model-monitoring.ipynb
+++ b/02-experiment-tracking/02-model-monitoring.ipynb
@@ -202,13 +202,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 09:49:58 INFO mlflow.tracking.fluent: Experiment with name 'best_model' does not exist. Creating a new experiment.\n"
+      "2023/06/22 09:52:47 INFO mlflow.tracking.fluent: Experiment with name 'best_model' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/8', creation_time=1687070998995, experiment_id='8', last_update_time=1687070998995, lifecycle_stage='active', name='best_model', tags={}>"
+       "<Experiment: artifact_location='/home/mgubuntu/projects/marketing-mlops/02-experiment-tracking/mlruns/8', creation_time=1687416767775, experiment_id='8', last_update_time=1687416767775, lifecycle_stage='active', name='best_model', tags={}>"
       ]
      },
      "execution_count": 10,
@@ -294,22 +294,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/06/18 10:02:47 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
+      "2023/06/22 09:54:00 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
       " - mlflow (current: 2.3.2, required: mlflow==2.3)\n",
       "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "mlflow.pyfunc.loaded_model:\n",
+       "  artifact_path: model\n",
+       "  flavor: mlflow.sklearn\n",
+       "  run_id: dea7e33c2f064ec28b844a20a4dbf41c"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Model run id (model uri)\n",
-    "logged_model = 'runs:/b6c40a787b1747db962c87cdf72194cc/model'\n",
+    "logged_model = 'runs:/dea7e33c2f064ec28b844a20a4dbf41c/model'\n",
     "\n",
     "# Load model as a PyFuncModel.\n",
     "loaded_model = mlflow.pyfunc.load_model(logged_model)\n",
@@ -341,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +363,7 @@
        "array([0, 0, 0, 0, 0, 1, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
